# swc_re_utils

./: Cargo.toml  README.md
data/: obfuscated.js  obfuscated.out.js
src/: lib.rs  mod.rs
src/transformations/: cleanup.rs  constant_evaluation.rs  mod.rs  normalize_ast.rs  remove_unused.rs  sequence_exprs.rs
src/transformations/obfuscatorio/: mod.rs  proxy_functions.rs  string_array.rs
src/utils/: js_utils.rs  mod.rs  swc_utils.rs
